--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "node-ical": "^0.12.1",
     "object-sizeof": "^1.6.1",
     "patch-package": "^6.4.7",
-    "postinstall-postinstall": "^2.1.0",
     "pg": "^8.6.0",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "1.12.1",
     "randomcolor": "0.5.3",
     "sanitize-html": "^2.3.2",
@@ -81,6 +81,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "get-graphql-schema": "^2.1.2",
     "graphql-schema-linter": "^0.2.0",
+    "lerna": "^4.0.0",
     "linkemon": "^0.1.1",
     "nodemon": "1.18.7",
     "prettier": "1.12.1",
