--- a/config.postgres.yml
+++ b/config.postgres.yml
@@ -129,7 +129,7 @@ TABS:
           limit: 25
     - type: ActionBar
       actions: [{
-        title: Announcements,
+        title: News,
         icon: cal,
         id: 122,
         action: OPEN_CHANNEL,
